Update Night Icon Title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="cloud"></span>
     </div>
 
-    <div id="night" icon="supermoon" data-label="Cool!">
+    <div id="night" icon="supermoon" data-label="Night">
         <span class="moon"></span>
         <span class="meteor"></span>
     </div>
