fix overlay text

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <span class="moon"></span>
         <span class="meteor"></span>
     </div>
-    
-    <div>
-        <p class="greeting"></p>
+
+    <div id="overlay">
+        <div class="greeting"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
