add noon time & random messages

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <span class="cloud"></span>
     </div>
 
+    <div id="noon" icon="cloudy" data-label="Noon">
+        <span class="sun"></span>
+    </div>
+
     <div id="afternoon" icon="sunny" data-label="Afternoon">
         <span class="sun"></span>
         <span class="cloud"></span>
